k8s/versions/external-webhooks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-forwarder-svc
  namespace: webhook-forwarder
spec:
  selector:
    app: webhook-forwarder
  ports:
    - port: 8000
  type: ClusterIP
