k8s/versions/external-webhooks/webhook-forwarder-user-config.dist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-forwarder
  namespace: webhook-forwarder
spec:
  template:
    metadata:
      name: webhook-forwarder
    spec:
      serviceAccountName: webhook-forwarder-service-account
      containers:
        - name: webhook-forwarder
#          image: TODO # optionally set your own image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-forwarder-ingress
  namespace: webhook-forwarder
spec:
  ingressClassName: TODO
